web-infras/parser/tests/fixtures/babel/es2022/module-string-names/import-local-is-string/output.txt
[SyntaxError]: A string literal cannot be used as an imported binding. (1,10)
1|import { "foo" } from "foo";
 |        ^
